--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ node_modules
 # logs
 *.log
 npm-debug.log*
+
+# test output
+/test/fixtures/example/output/*
+!/test/fixtures/example/output/.gitkeep
